--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -27,8 +27,9 @@
         <% if (items.length > 0) { %>
             <% items.forEach(item => { %>
                 <div>
-                    <img src="data:<%= item.img.contentType %>;base64,<%= item.img.data.toString('base64') %>,<%= item.img.description %>;" width="300" />
-                </div>
+                    <img src="data:<%= item.img.contentType %>;base64,<%= item.img.data.toString('base64') %>" width="300" />
+
+                <%= item.img.description %></div>
             <% }); %>
         <% } %>
     </div>
