--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -29,7 +29,7 @@
                 <div>
                     <img src="data:<%= item.img.contentType %>;base64,<%= item.img.data.toString('base64') %>" width="300" />
 
-                <%= item.img.description %></div>
+                <p><%= item.img.description %></p></div>
             <% }); %>
         <% } %>
     </div>
