--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Uploading</title>
 </head>
+
 <body>
     <h1>To Upload Image on MongoDB</h1>
     <hr />
@@ -26,7 +27,7 @@
     <div>
         <% if (items.length > 0) { %>
             <% items.forEach(item => { %>
-                <div>
+                <div style="display:inline-block;">
                     <img src="data:<%= item.img.contentType %>;base64,<%= item.img.data.toString('base64') %>" width="300" />
 
                 <p><%= item.img.description %></p></div>
