--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -14,6 +14,8 @@
             <div>
                 <label for="image">Upload Image</label>
                 <input type="file" id="image" name="image" required />
+                <input type="text" id="description" name="description" required >Description</input>
+
             </div>
             <div>
                 <button type="submit">Submit</button>
