--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -14,7 +14,8 @@
             <div>
                 <label for="image">Upload Image</label>
                 <input type="file" id="image" name="image" required />
-                <input type="text" id="description" name="description" required >Description</input>
+                <label for="description">Description</label>
+                <input type="text" id="description" name="description" required />
 
             </div>
             <div>
