--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -28,7 +28,9 @@
         <% if (items.length > 0) { %>
             <% items.forEach(item => { %>
                 <div>
-                    <img src="data:<%= item.img.contentType %>;base64,<%= item.img.data.toString('base64') %>" width="300" />
+                    <img src="data:<%= item.img.contentType %>;base64,<%= item.img.data.toString('base64') %>" width="182" />
+<p><%= item.img.description %></p>
+
                 </div>
             <% }); %>
         <% } %>
