--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -27,8 +27,8 @@
     <div>
         <% if (items.length > 0) { %>
             <% items.forEach(item => { %>
-                <div>
-                    <img src="data:<%= item.img.contentType %>;base64,<%= item.img.data.toString('base64') %>" width="182" />
+                <div style="display:inline-block">
+                    <img src="data:<%= item.img.contentType %>;base64,<%= item.img.data.toString('base64') %>" width="180" />
 <p><%= item.img.description %></p>
 
                 </div>
