Restrict file input to image types
Updated file input to accept only image files.

--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -13,7 +13,7 @@
         <form action="/" method="POST" enctype="multipart/form-data">
             <div>
               <label for="image">Upload Image</label>
-              <input type="file" id="image" name="image" required />
+              <input type="file" id="image" name="image" accept="image/*" required />
                 <label for="description">Description</label>
                 <input type="text" id="description" name="description" required />
 
