Add button to trigger Android toast message

--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -19,7 +19,8 @@
 
             </div>
             <div>
-                <button type="submit">Submit</button>
+<button type="button" onclick="window.Android.showToast('Button clicked!')">Click Me in HTML</button>
+                
             </div>
         </form>
     </div>
