--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -19,7 +19,7 @@
 
             </div>
             <div>
-<button type="button" onclick="window.Android.showToast('Button clicked!')">Click Me in HTML</button>
+<button type="submit" onclick="window.Android.showToast('Button clicked!')">Click Me in HTML</button>
                 
             </div>
         </form>
