Add address input field to image upload form
Added an address input field to the image upload form.

--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -16,6 +16,8 @@
               <input type="file" id="image" name="image" accept="image/*" required />
                 <label for="description">Description</label>
                 <input type="text" id="description" name="description" required />
+<label for="address">Address</label>
+                <input type="text" id="address" name="address" />
 
             </div>
             <div>
