--- a/views/imagepage.ejs
+++ b/views/imagepage.ejs
@@ -17,7 +17,7 @@
                 <label for="description">Description</label>
                 <input type="text" id="description" name="description" required />
 <label for="address">Address</label>
-                <input type="text" id="address" name="address" />
+                <id="address" name="address" />
 
             </div>
             <div>
